Se corrigio el total de pago