@@ -1,10 +1,13 @@
 package com.libreria.controller;
 
+import org.springframework.core.io.ClassPathResource;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 
 @RestController
 @RequestMapping("/api/ubigeo")
@@ -12,22 +15,40 @@ import java.nio.file.Paths;
 public class UbigeoController {
 
     private String loadJson(String fileName) throws IOException {
-        byte[] bytes = Files.readAllBytes(Paths.get("src/main/resources/" + fileName));
-        return new String(bytes);
+        ClassPathResource resource = new ClassPathResource(fileName);
+        try (InputStream is = resource.getInputStream()) {
+            byte[] bytes = is.readAllBytes();
+            return new String(bytes, StandardCharsets.UTF_8);
+        }
     }
 
     @GetMapping("/departamentos")
-    public ResponseEntity<String> getDepartamentos() throws IOException {
-        return ResponseEntity.ok(loadJson("ubigeo_peru_2016_departamentos.json"));
+    public ResponseEntity<String> getDepartamentos() {
+        try {
+            return ResponseEntity.ok(loadJson("ubigeo_peru_2016_departamentos.json"));
+        } catch (IOException e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body("{\"error\":\"No se pudieron cargar los departamentos\"}");
+        }
     }
 
     @GetMapping("/provincias")
-    public ResponseEntity<String> getProvincias() throws IOException {
-        return ResponseEntity.ok(loadJson("ubigeo_peru_2016_provincias.json"));
+    public ResponseEntity<String> getProvincias() {
+        try {
+            return ResponseEntity.ok(loadJson("ubigeo_peru_2016_provincias.json"));
+        } catch (IOException e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body("{\"error\":\"No se pudieron cargar las provincias\"}");
+        }
     }
 
     @GetMapping("/distritos")
-    public ResponseEntity<String> getDistritos() throws IOException {
-        return ResponseEntity.ok(loadJson("ubigeo_peru_2016_distritos.json")); // CORREGIDO
+    public ResponseEntity<String> getDistritos() {
+        try {
+            return ResponseEntity.ok(loadJson("ubigeo_peru_2016_distritos.json"));
+        } catch (IOException e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body("{\"error\":\"No se pudieron cargar los distritos\"}");
+        }
     }
 }
